--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.simpleapplocker">
 
-
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <uses-feature android:name="android.hardware.sensor.stepcounter"  android:required="true"/>
+    <uses-feature android:name="android.hardware.sensor.stepDetector"  android:required="true"/>
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -20,10 +22,7 @@
         android:required="false" />
     <uses-feature
         android:name="android.hardware.wifi"
-        android:required="false" />
-
-    <!-- v1.0.0 -->
-
+        android:required="false" /> <!-- v1.0.0 -->
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
@@ -31,18 +30,13 @@
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
-    <!-- v2.1.0 -->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" /> <!-- v2.1.0 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!-- 2.1.2 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <!-- Draw over other apps -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 2.1.2 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Draw over other apps -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.BROADCAST_PACKAGE_ADDED" />
-
 
     <application
         android:allowBackup="true"
@@ -51,7 +45,8 @@
         android:roundIcon="@drawable/lock"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LockScreen"></activity>
+        <activity android:name=".StepCounter"></activity>
+        <activity android:name=".LockScreen" />
         <activity android:name=".lockapp_activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -60,7 +55,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
         <receiver
             android:name=".RestartService"
@@ -77,13 +71,10 @@
             </intent-filter>
         </receiver>
 
-
         <service
             android:name=".BackgroundServices"
             android:enabled="true"
             android:stopWithTask="false" />
-
-
     </application>
 
 </manifest>
