--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.simpleapplocker"
+        applicationId "com.example.beactive"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
