--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StatsActivity"></activity>
+        <activity android:name=".BadgeActivity"></activity>
         <activity android:name=".StepCounter" />
         <activity android:name=".LockScreen" />
         <activity android:name=".lockapp_activity" />
