--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.beactive">
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"
+    <uses-permission
+        android:name="android.permission.FOREGROUND_SERVICE"
         android:configChanges="orientation"
-        android:screenOrientation="portrait"/>
+        android:screenOrientation="portrait" />
 
     <uses-feature
         android:name="android.hardware.sensor.stepcounter"
@@ -50,7 +51,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BadgeActivity"></activity>
+        <activity android:name=".StatsActivity"></activity>
+        <activity android:name=".BadgeActivity" />
         <activity android:name=".StepCounter" />
         <activity android:name=".LockScreen" />
         <activity android:name=".lockapp_activity" />
