--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'info.androidhive:fontawesome:0.0.5'
     implementation 'com.android.support:design:28.0.0'
 
+    implementation 'com.android.support:preference-v7:28.0.0'
 
 
 }
